# mcpyghidra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  tasks.py
.github/workflows/: ci.yml  release.yml
docs/: index.md  installation.md  mcp-client-config.md  quickstart.md  tools-reference.md
docs/specs/: rpc-callbacks.md
src/mcpyghidra/: backend.py  cli_status.py  decaf_init.py  dispatch.py  headless.py  mcpserver.py  mcpyghidra.py  models.py  portspec.py  rpc_callbacks.py  server.py
src/mcpyghidra/tools/: __init__.py  analysis.py  cfg.py  core.py  modify.py  open_program.py  scripting.py  search.py  types.py
tests/: conftest.py
tests/e2e/: conftest.py  ghidra_gui_helper.py  start_gui_server.sh  test_all_tools.py  test_cfg_callgraph.py  test_concurrency.py  test_gui_features.py  test_headless_launch.py  test_headless_persistence.py  test_rpc_callbacks.py
tests/fixtures/: struct_test_stripped.elf
tests/integration/: conftest.py  helpers.py  test_analysis.py  test_cfg.py  test_core.py  test_modify.py  test_scripting.py  test_search.py  test_tool_contract.py  test_typed_fixture.py  test_types.py
tests/unit/: conftest.py  test_analysis_branches.py  test_backend_branches.py  test_batch.py  test_cfg_branches.py  test_cfg_normalization.py  test_cli_status.py  test_core_branches.py  test_dispatch.py  test_dual_interface.py  test_elicitation.py  test_headless_args.py  test_headless_project.py  test_models.py  test_modify_branches.py  test_open_program.py  test_open_program_branches.py  test_port_manager.py  test_portspec.py  test_rpc_callbacks.py  test_rpc_server_integration.py  test_rpc_types.py  test_scripting_branches.py  test_search_branches.py  test_search_utils.py  test_self_namespace.py  test_server_branches.py  test_server_info.py  test_types_branches.py
