[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mcpyghidra"
dynamic = ["version"]
description = "Ghidra MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Eric Lin", email = "17968842+anselor@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Security",
]
dependencies = [
    "asgi-lifespan",
    "fastapi",
    "mcp>=1.23.0",
    "pyghidra_decaf",
]

[project.entry-points."decaf.init"]
decaf_setup = "mcpyghidra.decaf_init:decaf_init"

[project.entry-points."decaf.load"]
decaf_load = "mcpyghidra.mcpyghidra:decaf_load"

[project.scripts]
mcpyghidra-headless = "mcpyghidra.headless:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "anyio>=4.0.0",
    "mcp>=1.23.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]

[project.urls]
"Homepage" = "https://github.com/nightwing-us/mcpyghidra"
"Repository" = "https://github.com/nightwing-us/mcpyghidra"
"Bug Tracker" = "https://github.com/nightwing-us/mcpyghidra/issues"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^(?P<version>[vV]?\\d+(?:\\.\\d+){0,3}[^\\+]*)(?:\\+.*)?$"
path = "src/mcpyghidra/_version.py"

[tool.hatch.build.hooks.vcs]
version-file = "src/mcpyghidra/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpyghidra"]

[tool.isort]
profile = "pycharm"
indent = 4
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
import_heading_stdlib = "Standard Libraries"
import_heading_thirdparty = "Third Party Libraries"
import_heading_firstparty = "Our Libraries"
known_firstparty = "mcpyghidra"
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
use_parentheses = true
src_paths = ["src"]
skip = '.venv,venv,env,.nox,_version.py,build'

[tool.mypy]
# Gradual typing: enable the high-value checks but don't force annotations
# everywhere. --strict emits ~250 errors against Ghidra-API-heavy code that
# only has Any-typed stubs; tighten incrementally as files are annotated.
#
# warn_return_any is intentionally OFF: every wrapper around a Ghidra API
# call returns Any (the Ghidra stubs are all Any-typed), and silencing those
# at every return site would be ~80 surgical ignores. Re-enable once the
# Ghidra wrappers grow real annotations / cast() calls.
#
# warn_unreachable is similarly OFF: mypy flags Any-typed branches as
# unreachable when they actually depend on Ghidra runtime state. False
# positives outweigh real catches in this codebase.
warn_redundant_casts = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
mypy_path = "src"
packages = ["mcpyghidra"]
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

# custom_types_312.py uses PEP 695 `type` syntax (3.12+). mypy's own
# parser is bound to the Python it runs under, so on the 3.10/3.11 matrix
# legs it raises "Invalid syntax" before any type-checking. The
# custom_types_p312.py sibling provides equivalent definitions for older
# Pythons; mirrors the ruff `extend-exclude` and the coverage `omit` already
# in this file.
exclude = ["src/mcpyghidra/custom_types_312\\.py$"]

# Ghidra / pyghidra / Java bridge modules have no type stubs (they're
# loaded through the JVM at runtime, so static analysis can't resolve
# them). Suppress import-not-found / import-untyped for the whole
# Ghidra-Java surface area.
[[tool.mypy.overrides]]
module = [
    "ghidra.*",
    "pyghidra",
    "pyghidra.*",
    "pyghidra_decaf.*",
    "jpype",
    "jpype.*",
    "java",
    "java.*",
    "javax",
    "javax.*",
    "docking",
    "docking.*",
    "generic.*",
    "util.*",
]
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
# custom_types_312.py uses PEP 695 `type` syntax which requires Py3.12.
# The pre-3.12 sibling (custom_types_p312.py) covers older Pythons.
# Exclude the 3.12-only file so ruff lint runs against py310 cleanly.
extend-exclude = ["src/mcpyghidra/custom_types_312.py"]

[tool.coverage.run]
# coverage's parser is python-version-bound and chokes on PEP 695 `type`
# under py310/3.11. Mirrors the ruff exclude.
omit = ["*/custom_types_312.py", "*/_version.py"]
# Parallel mode lets each subprocess (e.g. headless server launched by
# e2e tests) write its own .coverage.<host>.<pid>.<rand> file. The
# CI run combines them with `coverage combine` before reporting.
parallel = true
source = ["src/mcpyghidra"]
branch = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
quote-style = "single"
indent-style = "space"
line-ending = "lf"
preview = true

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.ruff.lint.pycodestyle]
max-line-length = 120
max-doc-length = 80


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"